--- a/mongo-ingress.yaml
+++ b/mongo-ingress.yaml
@@ -5,12 +5,13 @@ metadata:
   namespace: abdallah-default
 spec:
   rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: mongo-express-service
-                port:
-                  number: 8081
+  - host: abdallah-mongodb.oweis.tech
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: mongo-express-service
+              port:
+                number: 8081
