changed to disable mariadb

--- a/helm-wordpress-vals.yaml
+++ b/helm-wordpress-vals.yaml
@@ -14,7 +14,8 @@ externalDatabase:
   password: admin
   database: wordpress
 
-mariadb.primary.persistence.storageClass: ceph-block
+mariadb:
+  enabled: false
 
 ## Custom ClusterIP Service
 service:
